--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,9 @@
 {
   "version": 2,
-  "builds": [
+  "rewrites": [
     {
-      "src": "*.html",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/",
-      "dest": "/BUSINESS_PROCESS_MANUAL.html"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
+      "source": "/",
+      "destination": "/BUSINESS_PROCESS_MANUAL.html"
     }
   ],
   "headers": [
